# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-07-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Rewrite nodetool script to simplify the release script
    * Add CLOUDI_PID_FILE as a configure environment variable
      with the default equivalent to $localstatedir/log/cloudi/cloudi.pid
      (keeps release script variables static)

2017-07-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify release scripts with configuration values assigned

2017-06-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add fixes for cloudi_service_filesystem tests to use TMPDIR

2017-06-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_timestamp:uptime functions

2017-06-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Go CloudI API 32bit support
    * Fix Python/C CloudI API compilation when Python 3 is requested
      (previously was compiling/linking with Python 2)

2017-06-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add pointer handling comment to C http_req test

2017-06-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.7.1 released

2017-06-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix internal services_remove use with automatic_loading == true
      (the default) so all modules are marked as old before purge
    * Do not log error when duo_mode enabled service is stopped or restarted

2017-06-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changed the included Erlang services from dict to maps usage
    * Performed manual-update for generated source files
    * Update backward-cpp
    * Added Haskell CloudI API source code documentation

2017-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changed license from BSD-4-Clause to MIT
    * Haskell CloudI API 1.7.0 package has a bug
      (http://hackage.haskell.org/package/cloudi)
      though it wasn't in the 1.7.0 release of this repo