@@ -13,6 +13,10 @@
 
 -define(SHUTDOWN_TIME_MAX, 65000).
 
+% twice this number of atoms is created when running this script
+% (used for nodetool script node names and remsh node names)
+-define(MAX_ATOMS, 251). % prime number
+
 -record(state,
         {
             timeout = ?SHUTDOWN_TIME_MAX :: pos_integer(),
@@ -111,7 +115,7 @@ node_canonical(Node) ->
 
 node_script(Node) ->
     {Name, Host} = node_split(Node),
-    NameUnique = Name ++ erlang:integer_to_list(os:system_time(micro_seconds)),
+    NameUnique = Name ++ unique(),
     if
         Host == [] ->
             erlang:list_to_atom(NameUnique);
@@ -128,6 +132,9 @@ node_remsh(NodeScript) ->
         true ->
             erlang:list_to_atom(NameUniqueRemsh ++ [$@ | Host])
     end.
+
+unique() ->
+    erlang:integer_to_list(erlang:list_to_integer(os:getpid()) rem ?MAX_ATOMS).
 
 parse_vmargs(VMArgs, State) ->
     case file:open(VMArgs, [read, raw, read_ahead]) of
